# rust-api-boilerplate

./: Cargo.toml
src/: main.rs
src/mdoels/: mod.rs  sample_body.rs
src/routes/: index.rs  mod.rs
