[package]
name = "api-server-boilerplate"
version = "0.1.0"
authors = ["saissei <tariraritarara.214@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-rt = "2.0.2"
actix-web = "3.3.2"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
